aws/second infranstrure using jenkins, ansible, and docker [check details file]/aws_eip.tf
resource "aws_eip" "bastion_eip" {
  instance = "${aws_instance.bastion.id}"
  vpc = true
}
